# job-application-system

./: .env.example  .gitignore  INSTALL-ALL.sh  MCP-SERVERS-README.md  README.md  SETUP.md  deploy.sh  docker-compose.yml  install-all-mcp.sh  openclaw-mcp-config.json  package.json  render.yaml  requirements.txt  skills.sh  unified_dashboard.py  wsgi.py
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  docker-entrypoint.sh  pyproject.toml  railway.toml  railway.worker.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_add_indexes.py  0002_add_site_credentials_fix_applications.py  0003_add_chat_threads.py  0003_add_consultant_tables.py  0004_add_profile_projects.py
backend/app/: config.py  database.py  main.py
backend/app/agents/: application_agent.py  base_agent.py  consultant_graph.py  cover_letter_agent.py  cv_optimizer_agent.py  followup_agent.py  matching_agent.py  scraping_agent.py
backend/app/api/: applications.py  auth.py  chat.py  consultant.py  cv.py  dashboard.py  deps.py  documents.py  jobs.py  pipeline.py  users.py
backend/app/core/: blacklist.py  security.py  security_headers.py  storage.py
backend/app/models/: __init__.py  agent_run.py  application.py  chat.py  conversation.py  document.py  job.py  site_credential.py  user.py
backend/app/schemas/: agent.py  application.py  chat_schemas.py  dashboard.py  document.py  job.py  user.py
backend/app/services/: bonne_alternance_api.py  browser_session.py  claude_service.py  (+6 more)
backend/worker/: beat_schedule.py  celery_app.py
(+112 files in other folders)
