[tool.poetry]
name = "postulio-backend"
version = "1.0.0"
description = "Postulio — AI-powered job application platform for France"
authors = ["Postulio Team"]
python = "^3.12"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.0"}
asyncpg = "^0.29.0"
alembic = "^1.13.0"
pydantic = {extras = ["email"], version = "^2.6.0"}
pydantic-settings = "^2.2.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.9"
anthropic = "^0.28.0"
celery = {extras = ["redis"], version = "^5.3.0"}
redis = "^5.0.0"
jobspy2 = "^1.1.0"
playwright = "^1.43.0"
pdfplumber = "^0.11.0"
weasyprint = "^62.0"
httpx = "^0.27.0"
tenacity = "^8.2.0"
pytz = "^2024.1"
python-dateutil = "^2.9.0"
aiofiles = "^23.2.0"
sse-starlette = "^2.1.0"
psutil = "^5.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
